# SkyPulse-Streaming-Pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  config.py  config.toml  database.py  fetchers.py  map_layers.py  requirements.txt
deploy/: Dockerfile.flink  docker-compose.flink.yml  docker-compose.yml  pyproject.flink.toml
infra/: .gitignore  setup.bat  setup.sh
infra/migrations/: migrate.py
infra/terraform/: .terraform.lock.hcl  outputs.tf  project.tf  provider.tf  settings.tf  variables.tf
logs/pipeline/: pipeline.yml
logs/pipeline/assets/ingestion/: ingest_airlines.py  ingest_airports.py
logs/pipeline/assets/marts/: mart_flight_activity.sql  mart_flight_context.sql  mart_seismic_activity.sql  mart_weather_conditions.sql
logs/pipeline/assets/staging/: stg_airlines.sql  stg_airports.sql  stg_flight_context.sql  stg_flights.sql  stg_routes.sql  stg_seismics.sql  stg_seismics_tumbling.sql  stg_weather.sql  stg_weather_tumbling.sql
notebooks/: flights_producer.ipynb  seismic_consumer.ipynb  seismic_producer.ipynb  weather_consumer.ipynb  weather_producer.ipynb
pipeline/: pipeline.yml
pipeline/assets/ingestion/: ingest_airlines.py  ingest_airports.py  ingest_planes.py  ingest_routes.py  requirements.txt
pipeline/assets/marts/: mart_flight_activity.sql  mart_flight_context.sql  mart_seismic_activity.sql  mart_weather_conditions.sql
pipeline/assets/staging/: stg_airlines.sql  stg_airports.sql  stg_flights.sql  stg_flights_tumbling.sql  stg_routes.sql  stg_seismics.sql  stg_weather.sql
scripts/: run_bruin.bat  test_bruin.bat  tree.py  wait_topics.py
scripts/bruin/: run_bruin.bat  run_bruin.sh  test_bruin.sh  validate_bruin.bat  validate_bruin.sh
src/: Dockerfile.consumers  Dockerfile.jobs  Dockerfile.prod_con  Dockerfile.producers  logger.py  start.sh  start_consumers.sh  start_jobs.sh  start_producers.sh
src/consumers/: flight_consumer.py  seismic_consumer.py  weather_consumer.py
src/jobs/: flight_context_tumbling.py  flight_tumbling.py  seismic_tumbling.py  weather_tumbling.py
src/jobs/jobs_quix/: flight_context_tumbling.py  flight_tumbling.py  seismic_tumbling.py  weather_tumbling.py
src/models/: flight.py  seismic.py  weather.py
src/producers/: flight_producer.py  flights_producer.py  seismic_producer.py  weather_producer.py
src/producers/misc/: cache.sqlite
