[project]
name = "skypulse-streaming-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5",
    "dotenv>=0.9.9",
    "httpx>=0.27.0",
    "kafka-python>=2.3.0",
    "lxml>=6.0.2",
    "numpy>=2.4.3",
    "openmeteo-requests>=1.7.5",
    "pandas>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydeck>=0.9.1",
    "python-dotenv>=1.2.2",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "setuptools>=68",
    "streamlit>=1.35.0",
]

[tool.uv]
managed = true

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"
exclude = [
    "notebooks",
    "**/*.ipynb",
    "src/jobs/**.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errores, Pyflakes, isort

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
