[project]
name = "skypulse-streaming-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5",
    "httpx>=0.27.0",
    "kafka-python>=2.3.0",
    "lxml>=6.0.2",
    "numpy>=2.4.3",
    "openmeteo-requests>=1.7.5",
    "pandas>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydeck>=0.9.1",
    "python-dotenv>=1.2.2",
    "quixstreams>=3.23.5",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "setuptools>=68",
    "streamlit>=1.55.0",
]

[tool.uv]
managed = true

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"
exclude = [
    "notebooks",
    "**/*.ipynb",
    "src/jobs/**.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errores, Pyflakes, isort

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

producers = [
    "kafka-python>=2.3.0",
    "pandas>=1.3.0",
    "python-dotenv>=1.2.2",
    "retry-requests>=2.0.0",
    "requests-cache>=1.3.1",
    "openmeteo-requests>=1.7.5",
    "requests",
    "urllib3>=2.0,<3.0",
]

consumers = [
    "kafka-python>=2.3.0",
    "pandas>=1.3.0",
    "python-dotenv>=1.2.2",
    "retry-requests>=2.0.0",
    "requests-cache>=1.3.1",
    "openmeteo-requests>=1.7.5",
    "psycopg2-binary>=2.9.11",
    "requests",
    "urllib3>=2.0,<3.0",
]

jobs = [
    "psycopg2-binary>=2.9.11",
    "quixstreams>=3.23.5",
    "python-dotenv>=1.2.2",
]
